<resources>
    <string name="app_name">My Application</string>
    <string name="textView">Hello World!</string>
    <string name="editTextHint">Введите текст</string>
    <string name="checkBoxText">Точно?</string>
    <string name="buttonText">Нажми</string>
    <string name="switchText">Точно?</string>
    <string name="editTextTextPasswordHint">TextPassword</string>
    <string name="editTextNumberHint">TextNumber</string>
    <string name="editTextPhoneHint">Phone</string>
    <string name="editTextTextEmailAddressHint">Email</string>
    <string name="editTextTextPersonNameHint">Name</string>
    <string name="editTextTextHint">Text</string>
    <string name="ac">AC</string>
    <string name="back_arrow"><![CDATA[<-]]></string>
    <string name="percent">%</string>
    <string name="slash">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="asterisk">*</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
</resources>